# ObjLib

./: .gitignore  CMakeLists.txt  README.md
include/: Components.hpp  Core.hpp  EssientialProccesses.hpp  Frames.hpp  GlobalTypes.hpp  GlobalVar.hpp  HelperFunctions.hpp  Input.hpp  Math.hpp  Objects.hpp  Rendering.hpp  Time.hpp
src/: Components.cpp  EssientialProccesses.cpp  Frames.cpp  GlobalTypes.cpp  GlobalVar.cpp  HelperFunctions.cpp  Input.cpp  Math.cpp  Objects.cpp  Rendering.cpp  Time.cpp
test/: ObjLibTest  Test.cpp
